// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convert > config > accepts options {"descProp":true} 1`] = `
"import * as React from "react";
const SvgComponent = ({
  desc,
  descId,
  ...props
}) => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" aria-describedby={descId} {...props}><title>{"Dismiss"}</title>{desc === undefined ? <desc id={descId}>{"Created with Sketch."}</desc> : desc ? <desc id={descId}>{desc}</desc> : null}<defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"dimensions":false} 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"expandProps":"start"} 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg {...props} width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink"><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"expandProps":false} 1`] = `
"import * as React from "react";
const SvgComponent = () => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink"><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"exportType":"named"} 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export { SvgComponent as ReactComponent };"
`;

exports[`convert > config > accepts options {"icon":"2em"} 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg width="2em" height="2em" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"icon":24} 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg width={24} height={24} viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"icon":true} 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg width="1em" height="1em" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"memo":true} 1`] = `
"import * as React from "react";
import { memo } from "react";
const SvgComponent = props => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
const Memo = memo(SvgComponent);
export default Memo;"
`;

exports[`convert > config > accepts options {"namedExport":"Component","state":{"caller":{"previousExport":"export default \\"logo.svg\\";"}}} 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export { SvgComponent as Component };
export default "logo.svg";"
`;

exports[`convert > config > accepts options {"native":true,"expandProps":false} 1`] = `
"import * as React from "react";
import Svg, { Defs, G, Path } from "react-native-svg";
/* SVGR has dropped some elements not supported by react-native-svg: title, desc */
const SvgComponent = () => <Svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink"><Defs /><G id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><G id="Dismiss" stroke="#063855" strokeWidth={2}><Path d="M51,37 L37,51" id="Shape" /><Path d="M51,51 L37,37" id="Shape" /></G></G></Svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"native":true,"icon":true} 1`] = `
"import * as React from "react";
import Svg, { Defs, G, Path } from "react-native-svg";
/* SVGR has dropped some elements not supported by react-native-svg: title, desc */
const SvgComponent = props => <Svg width={24} height={24} viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><Defs /><G id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><G id="Dismiss" stroke="#063855" strokeWidth={2}><Path d="M51,37 L37,51" id="Shape" /><Path d="M51,51 L37,37" id="Shape" /></G></G></Svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"native":true,"ref":true} 1`] = `
"import * as React from "react";
import Svg, { Defs, G, Path } from "react-native-svg";
/* SVGR has dropped some elements not supported by react-native-svg: title, desc */
import { forwardRef } from "react";
const SvgComponent = (props, ref) => <Svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" ref={ref} {...props}><Defs /><G id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><G id="Dismiss" stroke="#063855" strokeWidth={2}><Path d="M51,37 L37,51" id="Shape" /><Path d="M51,51 L37,37" id="Shape" /></G></G></Svg>;
const ForwardRef = forwardRef(SvgComponent);
export default ForwardRef;"
`;

exports[`convert > config > accepts options {"native":true} 1`] = `
"import * as React from "react";
import Svg, { Defs, G, Path } from "react-native-svg";
/* SVGR has dropped some elements not supported by react-native-svg: title, desc */
const SvgComponent = props => <Svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><Defs /><G id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><G id="Dismiss" stroke="#063855" strokeWidth={2}><Path d="M51,37 L37,51" id="Shape" /><Path d="M51,51 L37,37" id="Shape" /></G></G></Svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"ref":true} 1`] = `
"import * as React from "react";
import { forwardRef } from "react";
const SvgComponent = (props, ref) => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" ref={ref} {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
const ForwardRef = forwardRef(SvgComponent);
export default ForwardRef;"
`;

exports[`convert > config > accepts options {"replaceAttrValues":{"none":"{black}"}} 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke={black} strokeWidth={1} fill={black} fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"replaceAttrValues":{"none":"black"}} 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="black" strokeWidth={1} fill="black" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"svgProps":{"a":"b","b":"{props.b}"}} 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" a="b" b={props.b} {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export default SvgComponent;"
`;

exports[`convert > config > accepts options {"titleProp":true} 1`] = `
"import * as React from "react";
const SvgComponent = ({
  title,
  titleId,
  ...props
}) => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" aria-labelledby={titleId} {...props}>{title === undefined ? <title id={titleId}>{"Dismiss"}</title> : title ? <title id={titleId}>{title}</title> : null}<desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export default SvgComponent;"
`;

exports[`convert > config > descProp: without desc added 1`] = `
"import * as React from "react";
const SvgComponent = ({
  desc,
  descId,
  ...props
}) => <svg width={0} height={0} style={{
  position: "absolute"
}} aria-describedby={descId} {...props}>{desc ? <desc id={descId}>{desc}</desc> : null}<path d="M0 0h24v24H0z" fill="none" /></svg>;
export default SvgComponent;"
`;

exports[`convert > config > titleProp: without title added 1`] = `
"import * as React from "react";
const SvgComponent = ({
  title,
  titleId,
  ...props
}) => <svg width={0} height={0} style={{
  position: "absolute"
}} aria-labelledby={titleId} {...props}>{title ? <title id={titleId}>{title}</title> : null}<path d="M0 0h24v24H0z" fill="none" /></svg>;
export default SvgComponent;"
`;

exports[`convert > should convert 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g></g></svg>;
export default SvgComponent;"
`;

exports[`convert > should convert style attribute 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" width={48} height={48} id="svg2" inkscape:version="0.48.4 r9939" sodipodi:docname="list.inkscape.svg" {...props}><defs id="defs4" /><sodipodi:namedview id="base" pagecolor="#ffffff" bordercolor="#666666" borderopacity={1} inkscape:pageopacity={0} inkscape:pageshadow={2} inkscape:zoom={15.839192} inkscape:cx={25.129629} inkscape:cy={28.031549} inkscape:document-units="px" inkscape:current-layer="layer1" showgrid="true" inkscape:window-width={1920} inkscape:window-height={2050} inkscape:window-x={0} inkscape:window-y={55} inkscape:window-maximized={0}><inkscape:grid type="xygrid" id="grid2985" empspacing={4} visible="true" enabled="true" snapvisiblegridlinesonly="true" dotted="true" /></sodipodi:namedview><metadata id="metadata7"><rdf:RDF><cc:Work rdf:about=""><dc:format>{"image/svg+xml"}</dc:format><dc:type rdf:resource="http://purl.org/dc/dcmitype/StillImage" /><dc:title /></cc:Work></rdf:RDF></metadata><g inkscape:label="Layer 1" inkscape:groupmode="layer" id="layer1" transform="translate(0,-1004.3622)"><g id="g4238" transform="translate(0,1.7382813e-5)" inkscape:tile-cx={24} inkscape:tile-cy={42} inkscape:tile-w={40} inkscape:tile-h={4} inkscape:tile-x0={4} inkscape:tile-y0={40}><rect style={{
        color: "#000000",
        fill: "#a3a3a3",
        fillOpacity: 1,
        fillRule: "nonzero",
        stroke: "none",
        strokeWidth: 8,
        marker: "none",
        visibility: "visible",
        display: "inline",
        overflow: "visible",
        enableBackground: "accumulate"
      }} id="rect4240" width={4} height={4} x={4} y={1010.3622} rx={0.2} ry={0.2} /><rect ry={0.2} rx={0.2} y={1010.3622} x={12} height={4} width={32} id="rect4242" style={{
        color: "#000000",
        fill: "#a3a3a3",
        fillOpacity: 1,
        fillRule: "nonzero",
        stroke: "none",
        strokeWidth: 8,
        marker: "none",
        visibility: "visible",
        display: "inline",
        overflow: "visible",
        enableBackground: "accumulate"
      }} /></g><use x={0} y={0} inkscape:tiled-clone-of="#g4238" xlinkHref="#g4238" id="use4358" /><use x={0} y={0} inkscape:tiled-clone-of="#g4238" xlinkHref="#g4238" transform="translate(0,8)" id="use4360" /><use x={0} y={0} inkscape:tiled-clone-of="#g4238" xlinkHref="#g4238" transform="translate(0,16)" id="use4362" /><use x={0} y={0} inkscape:tiled-clone-of="#g4238" xlinkHref="#g4238" transform="translate(0,24)" id="use4364" /><use x={0} y={0} inkscape:tiled-clone-of="#g4238" xlinkHref="#g4238" transform="translate(0,32)" id="use4366" /></g></svg>;
export default SvgComponent;"
`;

exports[`convert > should handle special SVG attributes 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg xmlns="http://www.w3.org/2000/svg" {...props}><rect x={10} y={10} width={100} height={100} externalResourcesRequired="false" /></svg>;
export default SvgComponent;"
`;

exports[`convert > should not remove all style tags 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><style>{"\\n            path {\\n              fill: red;\\n            }\\n          "}</style><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g><style>{"\\n                #Shape {}\\n              "}</style></g></svg>;
export default SvgComponent;"
`;

exports[`convert > should remove null characters 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/" x="0px" y="0px" width="25px" height="25px" viewBox="0 0 25 25" style={{
  enableBackground: "new 0 0 25 25"
}} xmlSpace="preserve" {...props}><style type="text/css">{"\\n\\t.st0{fill:#FFFFFF;stroke:#434A54;stroke-miterlimit:10;}\\n"}</style><defs /><path className="st0" d="M19.4,24.5H5.6c-2.8,0-5.1-2.3-5.1-5.1V5.6c0-2.8,2.3-5.1,5.1-5.1h13.8c2.8,0,5.1,2.3,5.1,5.1v13.8 C24.5,22.2,22.2,24.5,19.4,24.5z" /></svg>;
export default SvgComponent;"
`;

exports[`convert > should remove style tags 1`] = `
"import * as React from "react";
const SvgComponent = props => <svg width="88px" height="88px" viewBox="0 0 88 88" xmlns="http://www.w3.org/2000/svg" xmlnsXlink="http://www.w3.org/1999/xlink" {...props}><title>{"Dismiss"}</title><desc>{"Created with Sketch."}</desc><defs /><style>{"\\n            #Blocks {\\n              fill: red;\\n            }\\n          "}</style><g id="Blocks" stroke="none" strokeWidth={1} fill="none" fillRule="evenodd" strokeLinecap="square"><g id="Dismiss" stroke="#063855" strokeWidth={2}><path d="M51,37 L37,51" id="Shape" /><path d="M51,51 L37,37" id="Shape" /></g><style>{"\\n                #Shape {}\\n              "}</style></g></svg>;
export default SvgComponent;"
`;
